src/test/ui/lexical-scopes.stderr
error[E0574]: expected struct, variant or union type, found type parameter `T`
  --> $DIR/lexical-scopes.rs:3:13
   |
LL |     let t = T { i: 0 };
   |             ^ not a struct, variant or union type
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use T;
   |

error[E0599]: no function or associated item named `f` found for type `Foo` in the current scope
  --> $DIR/lexical-scopes.rs:10:10
   |
LL |     Foo::f();
   |          ^ function or associated item not found in `Foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
